--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
     /> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body >
     <div id="blogbg" style="background-image: url(https://source.unsplash.com/1200x1200?<%=blog.tags%>);">
