--- a/views/home_blog.ejs
+++ b/views/home_blog.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blogs|TheLawsBender</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body >
     <div id="blogbg" style="background-image: url(https://source.unsplash.com/1200x1200?<%=blog.tags%>);">
