changes in footer

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -51,11 +51,11 @@
     </div>
     <footer id="footer">
       <div class="footer_div">
-      <!-- <p>Blog Website</p> -->
-      <p><i class="fa fa-facebook social fa-2x btn" aria-hidden="true"></i>
-        <i class="fa fa-twitter social fa-2x btn" aria-hidden="true"></i>
-        <i class="fa fa-instagram social fa-2x btn" aria-hidden="true"></i>
-        <i class="fa fa-envelope social fa-2x btn" aria-hidden="true"></i>
+      <p>
+        <a href="facebook.com" class="links" target="_blank"><i class="fa fa-facebook social fa-2x btn" aria-hidden="true"></i></a>
+        <a href="https://www.instagram.com/shreyansso.ni/" class="links" target="_blank"><i class="fa fa-instagram social fa-2x btn" aria-hidden="true"></i></a>
+        <a href="https://www.linkedin.com/in/shreyans-soni" class="links" target="_blank"><i class="fa fa-linkedin social fa-2x btn" aria-hidden="true"></i></a>
+        <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=soni21.shreyans@gmail.com" class="links" target="_blank"><i class="fa fa-envelope social fa-2x btn" aria-hidden="true"></i></a>
       </p>
       </div>
     </footer>
