--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -5,26 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog|TheLawsBender</title>
-    <!-- <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    /> -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+  <script>
+    function searchBar(value) {
+      let variable = <%- JSON.stringify(login) %>;
+      let length = value.length;
+      document.getElementById("results").innerHTML = ``
+      variable.forEach(element => {
+        let username = element.name
+        if(value.toLowerCase() == username.substring(0, length).toLowerCase() && value != '') {
+          document.getElementById("results").innerHTML += `<a href="/${element.userName}" class="links"><p class="dropdown"> ${username}</p></a>`
+        }
+      });
+      }
+  </script> 
   <nav id="navbar">
     <h2 id="header">Blog It!</h2>
+    <div>
+    <input type="text" class="input" id ="searchinput" name="search" placeholder="Search User" onkeyup=searchBar(this.value)> 
+    <div id="results">
+    </div>
+  </div>
     <a href="/logout" class="btn links" id="signoutlink">SIGNOUT</a>
   </nav>
-    <!-- <div class="Info">
-      <p id="infotext"><%= full_name %>'s Page</p>
-      <p class="infotext">Total Blogs Published: <%=blogs.length%></p>
-    </div> -->
     <div id="main">
-    <h4 class="randomtext"><%=full_name%>'s Blogs: </h4>
+    <h4 class="randomtext"><%=userArr.full_name%>'s Blogs: </h4>
     <a href="/dashboard/new" class="btn links write-new">Write a New Blog</a>
     <div class="container dash">
       <%if (blogs == ''){ %>
