--- a/public/css/style.css
+++ b/public/css/style.css
@@ -755,3 +755,15 @@ input[type = "checkbox"]{
     width: 15em;
     border-top: 0.001px solid rgba(49, 49, 49, 0.048);
 }
+
+.spacer{
+    aspect-ratio: 960/100;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.layer1{
+    background-image: url('./layered-waves-haikei.svg');
+}
