--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,8 +12,8 @@
       <nav id="navbar">
         <h2 id="header">Blog It!</h2>
         <script>
+          let variable = <%- JSON.stringify(login) %>;
           function searchBar(value) {
-            let variable = <%- JSON.stringify(login) %>;
             let length = value.length;
             document.getElementById("results").innerHTML = ``
             variable.forEach(element => {
@@ -35,7 +35,10 @@
       <div id="createblog">
         <p>Publish your passions, your way</p>
         <a href="register" class="btn create links">Create your own Blog</a>
-      </div>
+        </div>
+
+        <div class="spacer layer1"></div>
+
       <div id="main" class="home-container">
         <%if (blog == ''){ %>
           <p id="no-blog">No blogs available :/</p>
